# double_buffer_persistent

./: CMakeLists.txt  README.md
include/: VariadicToOutputStream.hpp  my_cuda_utils.hpp  my_cufft_utils.hpp  my_file_io_funcs.hpp  my_utils.hpp
src/: main.cu  my_file_io_funcs.cpp
